--- a/en/css/custom/main.css
+++ b/en/css/custom/main.css
@@ -11,6 +11,7 @@ Author Profile  :  https://themeforest.net/user/mironcoder
             COMMON STYLE START
 =========================================*/
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;800;900&display=swap");
+
 :root {
   --red: #ff3838;
   --gray: #777777;
@@ -89,7 +90,12 @@ body {
   line-height: 26px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: var(--heading);
 }
 
@@ -484,6 +490,7 @@ textarea.form-control {
   .nav-tabs li .nav-link {
     padding: 10px 0px;
   }
+
   .tab-pane {
     padding: 0px 15px;
   }
@@ -542,15 +549,19 @@ textarea.form-control {
   .section {
     padding: 60px 0px 0px;
   }
+
   .inner-section {
     margin-bottom: 60px;
   }
+
   .section-side-heading {
     margin-bottom: 60px;
   }
+
   .section-center-heading {
     margin-bottom: 30px;
   }
+
   .section-center-heading p {
     width: 100%;
     font-size: 16px;
@@ -569,6 +580,7 @@ textarea.form-control {
   .section {
     padding: 80px 0px 0px;
   }
+
   .inner-section {
     margin-bottom: 80px;
   }
@@ -641,6 +653,8 @@ textarea.form-control {
 .table-product img {
   width: 100px;
   border-radius: 6px;
+  height: 60px;
+  object-fit: cover;
 }
 
 .table-category h6 a {
@@ -708,6 +722,7 @@ textarea.form-control {
   .table-scroll {
     overflow-x: scroll;
   }
+
   .table-list {
     width: 900px;
   }
@@ -858,7 +873,7 @@ textarea.form-control {
   text-shadow: var(--primary-tshadow);
 }
 
-.breadcrumb-item + .breadcrumb-item::before {
+.breadcrumb-item+.breadcrumb-item::before {
   color: var(--primary-light);
   text-shadow: var(--primary-tshadow);
 }
@@ -967,7 +982,8 @@ textarea.form-control {
   margin: 0px 3px;
 }
 
-.page-item:first-child .page-link, .page-item:last-child .page-link {
+.page-item:first-child .page-link,
+.page-item:last-child .page-link {
   border-radius: 50%;
 }
 
@@ -1088,7 +1104,7 @@ textarea.form-control {
   display: none;
 }
 
-.star-rating input:checked ~ label::after {
+.star-rating input:checked~label::after {
   opacity: 1;
 }
 
@@ -1103,7 +1119,7 @@ textarea.form-control {
   opacity: 1;
 }
 
-.star-rating label:hover:hover ~ label::after {
+.star-rating label:hover:hover~label::after {
   opacity: 1;
 }
 
@@ -1475,14 +1491,17 @@ textarea.form-control {
 }
 
 @media (max-width: 575px) {
+
   .product-card.standard,
   .ad-standard .product-card.standard {
     flex-direction: column;
   }
+
   .product-card.standard .product-media,
   .ad-standard .product-card.standard .product-media {
     margin: 0px;
   }
+
   .product-card.standard .product-img img,
   .ad-standard .product-card.standard .product-img img {
     width: 100%;
@@ -1491,6 +1510,7 @@ textarea.form-control {
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
+
   .product-card.standard .product-img img,
   .ad-standard .product-card.standard .product-img img {
     width: 225px;
@@ -1666,22 +1686,27 @@ textarea.form-control {
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
   }
+
   .feature-img img {
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
   }
+
   .feature-wish {
     top: 15px;
     right: 15px;
   }
+
   .feature-title {
     font-size: 18px;
     line-height: 26px;
   }
+
   .feature-meta {
     display: flex;
     flex-direction: column;
   }
+
   .feature-price {
     margin: 0px 0px 5px;
   }
@@ -2849,17 +2874,21 @@ textarea.form-control {
   .review-item {
     padding: 20px 20px;
   }
+
   .review-author {
     padding-top: 15px;
     margin: 15px 0px 0px 30px;
   }
+
   .review-profile {
     flex-direction: column;
     align-items: flex-start;
   }
+
   .review-avatar {
     margin: 0px 0px 15px;
   }
+
   .review-desc {
     font-size: 15px;
   }
@@ -3137,27 +3166,34 @@ textarea.form-control {
   .header-part .container {
     padding: 15px;
   }
+
   .header-content {
     width: 100%;
     flex-direction: column;
     justify-content: center;
   }
+
   .header-logo {
     margin: 0px;
   }
+
   .header-user {
     display: none;
   }
+
   .search-btn {
     display: block;
   }
+
   .header-left {
     width: 100%;
     justify-content: space-between;
   }
+
   .header-right {
     display: none;
   }
+
   .header-form {
     margin-top: 15px;
     display: none;
@@ -3341,6 +3377,7 @@ textarea.form-control {
     visibility: visible;
     opacity: 1;
   }
+
   .sidebar-part.active .sidebar-body {
     left: 0px;
     width: 100%;
@@ -3521,13 +3558,16 @@ textarea.form-control {
 }
 
 @media (max-width: 575px) {
+
   .filter-label,
   .filter-action {
     display: none;
   }
+
   .filter-show {
     width: 80px;
   }
+
   .filter-short {
     width: 130px;
   }
@@ -3773,6 +3813,7 @@ textarea.form-control {
     margin-bottom: 30px;
     flex-direction: column;
   }
+
   .page-info {
     margin-bottom: 15px;
   }
@@ -4014,9 +4055,11 @@ textarea.form-control {
     align-items: flex-start;
     flex-direction: column;
   }
+
   .suggest-date {
     margin-bottom: 12px;
   }
+
   .blog-icon li {
     margin: 6px;
   }
@@ -4027,9 +4070,11 @@ textarea.form-control {
     align-items: flex-start;
     flex-direction: column;
   }
+
   .suggest-date {
     margin-bottom: 12px;
   }
+
   .blog-icon li {
     margin: 6px;
   }
@@ -4072,9 +4117,11 @@ textarea.form-control {
   .newsletter {
     margin-bottom: 60px;
   }
+
   .news-content {
     margin: 0px 0px 30px;
   }
+
   .news-form {
     margin: 0px;
   }
@@ -4084,12 +4131,15 @@ textarea.form-control {
   .news-form input {
     padding: 0px 75px 0px 20px;
   }
+
   .news-form .btn {
     padding: 10px 20px;
   }
+
   .news-form .btn i {
     margin-right: 0px;
   }
+
   .news-form .btn span {
     display: none;
   }
@@ -4286,11 +4336,13 @@ textarea.form-control {
   .footer-content {
     margin-bottom: 30px;
   }
+
   .footer-end-content {
     padding: 25px 0px;
     flex-direction: column;
     text-align: center;
   }
+
   .footer-end-content p {
     margin-bottom: 10px;
   }
@@ -4300,13 +4352,16 @@ textarea.form-control {
   .footer-part {
     padding: 60px 0px 60px;
   }
+
   .footer-content,
   .footer-info {
     margin-left: 30px;
   }
+
   .footer-card-content {
     flex-direction: column;
   }
+
   .footer-payment,
   .footer-option {
     margin-bottom: 30px;
@@ -4317,9 +4372,11 @@ textarea.form-control {
   .footer-part {
     padding: 80px 0px 60px;
   }
+
   .footer-card-content {
     margin-top: 20px;
   }
+
   .footer-payment a,
   .footer-payment button,
   .footer-option a,
@@ -4334,14 +4391,17 @@ textarea.form-control {
   .footer-part {
     padding: 90px 0px 60px;
   }
+
   .footer-card-content {
     margin-top: 20px;
   }
+
   .footer-payment,
   .footer-option,
   .footer-app {
     text-align: center;
   }
+
   .footer-payment a,
   .footer-payment button,
   .footer-option a,
@@ -4611,6 +4671,7 @@ textarea.form-control {
   .dash-menu-list {
     overflow-x: scroll;
   }
+
   .dash-menu-list ul {
     width: 900px;
   }
@@ -4620,33 +4681,42 @@ textarea.form-control {
   .single-banner {
     padding: 60px 0px 160px;
   }
+
   .dash-header-card {
     padding: 20px 20px 0px 20px;
   }
+
   .dash-header-left {
     flex-direction: column;
     align-items: flex-start;
   }
+
   .dash-avatar {
     margin-right: 0px;
     margin-bottom: 5px;
   }
+
   .dash-intro h5 {
     margin-bottom: 12px;
   }
+
   .dash-meta {
     margin-bottom: 25px;
   }
+
   .dash-header-right {
     flex-direction: column;
   }
+
   .dash-focus {
     margin-bottom: 20px;
     margin-right: 0px;
   }
+
   .dash-focus:last-child {
     margin-bottom: 0px;
   }
+
   .dash-header-alert button {
     margin-left: 0px;
   }
@@ -4656,6 +4726,7 @@ textarea.form-control {
   .dash-header-right {
     margin-top: 30px;
   }
+
   .dash-focus h2 {
     font-size: 32px;
   }
@@ -4665,6 +4736,7 @@ textarea.form-control {
   .single-banner {
     padding: 80px 0px 180px;
   }
+
   .dash-header-right {
     margin-top: 30px;
   }
@@ -4674,6 +4746,7 @@ textarea.form-control {
   .dash-avatar {
     margin-right: 25px;
   }
+
   .dash-avatar a img {
     width: 120px;
   }
