--- a/ar/css/custom/main.css
+++ b/ar/css/custom/main.css
@@ -4766,6 +4766,12 @@ textarea.form-control {
   }
 }
 
+.category-head .category-img {
+  height: 86px;
+  object-fit: cover;
+  filter: contrast(0.5);
+}
+
 /*========================================
             LAYOUT STYLE END
 =========================================*/
