--- a/en/css/custom/main.css
+++ b/en/css/custom/main.css
@@ -4758,6 +4758,10 @@ textarea.form-control {
   filter: contrast(0.5);
 }
 
+.footer-item {
+  margin-bottom: 5px;
+}
+
 /*========================================
             LAYOUT STYLE END
 =========================================*/
